# $Id$

2006-12-29	Konstantin V. Arkhipov

	* core/Cache/WatermarkedPeer.class.php: evil typo spotted and fixed.

	* core/Criteria/Projections: several simple object projections added
	for usage in Criteria.

	* main/Base/LightMetaProperty.class.php: light version of
	MetaClassProperty for usage in userspace.

	* core/Criteria/Criteria.class.php: distinct support added.

	* main/DAOs/StorableDAO.class.php: correct support for OneToMany
	relations implemented in property's path digging.

2006-12-27	Konstantin V. Arkhipov

	* core/Form/PlainForm.class.php, core/Form/Primitives/: clean()
	implemented.

2006-12-26	Konstantin V. Arkhipov

	* meta/builders/AutoDaoBuilder.class.php: uncacheLists() now call's
	same method in all referencing objects.

	* core/DB/, main/DAOs/, main/Criteria/: joined fetching strategy
	implemented.

	* core/Cache/ReferencePool.class.php: doesn't stores single
	dao-connected objects.

	* main/DAOs/GenericDAO.class.php: so-called 'identity map' addded.

	* meta/: now generates make-methods for cascading and batch object's
	building.

	* meta/patterns/SpookedEnumerationPattern.class.php: one more pattern,
	as requested by Sherman.

	* main/DAOs/StorableDAO.class.php: prevent duplicate joins in
	Criteria's processing.

	* meta/builders/AutoClassBuilder.class.php: containers will be
	recreated when lazy-switch differs.

2006-12-24	Konstantin V. Arkhipov

	* core/Criteria/Criteria.class.php: limit() changed to
	setLimit/setOffset.

	* main/DAOs/: initial support for dot-style property names
	implemented.

	* main/Containers/Unified/: all pointer-methods are now static too.

	* main/DAOs/InformedDAO.class.php: support interface for DAO's
	pointer-methods, which are now static: getObjectName, getTable,
	getSequence and getIdName.

	* main/DAOs/GenericDAO.class.php, main/DAOs/StorableDAO.class.php:
	getFields() dropped in favour of getMapping().

	* core/Base/Enumeration.class.php: changeId() renamed to setId(),